# PP-OCRv5-Cpp-Baseline

./: .gitignore  CMakeLists.txt  PP-OCRv5_on_4060.md  PP-OCRv5_on_V100  PP-OCRv5_on_V100.md  README.md  README_CN.md
scripts/: calculate_acc.py  compile_dependencies.sh  setup_environment.sh  startup.sh
src/: Benchmark.cpp
